@@ -1,3 +1,8 @@
+2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* synctex-etex.h, synctex-pdftex.h, synctex-tex.h, synctex-xetex.h:
+	Move generic_synctex_get_current_name() prototype to ../texmfmp.h.
+
 2011-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* synctex-etex.h, synctex-pdftex.h, synctex-tex.h, synctex-xetex.h:
